# marvelous-databricks-course-VanessaSchl

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  main.py  project_config.yml  pyproject.toml  pytest.ini  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
notebooks/: hotel_reservations-1.0.0-py3-none-any.whl  hotel_reservations-1.0.1-py3-none-any.whl  hotel_reservations-1.1.0-py3-none-any.whl  hotel_reservations-1.1.1-py3-none-any.whl  hotel_reservations-1.1.2-py3-none-any.whl  hotel_reservations-1.1.3-py3-none-any.whl  hotel_reservations-1.1.4-py3-none-any.whl  hotel_reservations-1.1.5-py3-none-any.whl  hotel_reservations-2.0.0-py3-none-any.whl  hotel_reservations-2.0.1-py3-none-any.whl  hotel_reservations-2.0.2-py3-none-any.whl  hotel_reservations-2.0.3-py3-none-any.whl  hotel_reservations-2.0.4-py3-none-any.whl  hotel_reservations-2.1.0-py3-none-any.whl  hotel_reservations-2.2.0-py3-none-any.whl  hotel_reservations-2.2.1-py3-none-any.whl  hotel_reservations-2.2.2-py3-none-any.whl  hotel_reservations-3.0.0-py3-none-any.whl
notebooks/week3/: 01_feature_serving.py  02_model_serving.py
notebooks/week5/: 01_create_source_data.py
notebooks/week_1/: 01_preprocessing.py  preprocessing.py
notebooks/week_2/: 01_preparation.py  02_logging_and_registering.py  03_feature_engineering.py
notebooks/week_3/: 01_feature_serving.py  02_model_serving.py
notebooks/week_5/: 02_create_online_table.py
scripts/week5/: deploy_model.py  evaluate_model.py  preprocess_data.py  train_model.py
scripts/week_5/: preprocess_data.py
(+5 files in other folders)
