[project]
name = "hotel-reservations"
version = "2.2.0"
description = "Hotel reservation project"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = ["xgboost==2.1.2",
                "scikit-learn==1.5.2",
                "cloudpickle==3.1.0",
                "mlflow==2.17.2",
                "numpy==1.26.4",
                "pandas==2.2.3",
                "pyarrow==15.0.2",
                "cffi==1.17.1",
                "scipy==1.14.1",
                "matplotlib==3.9.2",
                "seaborn==0.13.2",
                "databricks-feature-engineering==0.7",
                "databricks-sdk==0.32.2"]

[project.optional-dependencies]
dev = ["databricks-connect>=15.4.3, <16",
       "ipykernel>=6.29.5, <7",
       "pip>=24.2"]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
    "F821",  # undefined-name
    "E402",  # module-level-import-not-at-top
]

[tool.ruff.format]
indent-style = "space"
